--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .logo {
   height: 32px;
   margin: 16px;
-  background: rgba(255, 255, 255, 0.3);
+  background: rgba(244, 241, 241, 0.3);
 }
 
 nz-header {
@@ -18,11 +18,13 @@ nz-breadcrumb {
 }
 
 .inner-content {
-  padding: 24px;
-  background: #fff;
+  padding: 30px;
+  background: #aea1a1;
   min-height: 360px;
 }
 
 nz-footer {
   text-align: center;
 }
+
+
