--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nz-layout>
-  <nz-sider nzCollapsible nzWidth="200px">
+  <nz-sider nzCollapsible nzWidth="300px">
     <div class="logo"></div>
     <ul nz-menu nzTheme="dark" nzMode="inline">
       <li nz-menu-item>
@@ -12,7 +12,7 @@
       </li>
       <li nz-submenu nzTitle="User" nzIcon="user">
         <ul>
-          <li nz-menu-item *ngFor="let user of users">{{ user.name }}</li>
+          <li nz-menu-item *ngFor="let user of users" (click)="onclickName(user.name)" >{{ user.name }}</li>
         </ul>
       </li>
       <li nz-submenu nzTitle="Team" nzIcon="team">
@@ -34,7 +34,7 @@
         <nz-breadcrumb-item>User</nz-breadcrumb-item>
         <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
       </nz-breadcrumb>
-      <div class="inner-content">Bill is a cat.</div>
+      <div class="inner-content">{{innerContentTitle}}</div>
     </nz-content>
     <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
   </nz-layout>
