--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<app-layout-user></app-layout-user>
+<div class="container">
+  <div class="row justify-content-center align-items-center g-2">
+    <div>
+      <div class="app-layout-app">
+        <app-layout-user></app-layout-user>
+      </div>
+    </div>
+  </div>
+</div>
