--- a/src/app/layout-user/layout-user.component.html
+++ b/src/app/layout-user/layout-user.component.html
@@ -27,7 +27,7 @@
           </li>
         </ul>
       </li>
-      <li nz-submenu nzTitle="Team" nzIcon="team" (click)="clickPage()" >
+      <li nz-submenu nzTitle="Team" nzIcon="team" (click)="clickPage()">
         <ul>
           <li nz-menu-item>Team 1</li>
           <li nz-menu-item>Team 2</li>
@@ -44,7 +44,37 @@
     <nz-content>
       <nz-breadcrumb>
         <nz-breadcrumb-item>User</nz-breadcrumb-item>
-        <nz-breadcrumb-item>Bill</nz-breadcrumb-item>
+        <nz-breadcrumb-item>
+          <button nz-button (click)="showModal()">
+              <p>Click</p>
+              <nz-modal
+              [(nzVisible)]="isVisible"
+              nzTitle="The first Modal"
+              (nzOnCancel)="handleCancel()"
+              (nzOnOk)="addUser()"
+            >
+              <ng-container *nzModalContent>
+                <form nz-form>
+                  <nz-form-item>
+                    <nz-form-label [nzSpan]="6" nzFor="email"
+                      >E-mail</nz-form-label
+                    >
+                    <nz-form-control [nzSpan]="14">
+                      <input
+                        nz-input
+                        name="name"
+                        type="email"
+                        id="name"
+                        [(ngModel)]="addNewUser"
+                        (click)="addUser()"
+                      />
+                    </nz-form-control>
+                  </nz-form-item>
+                </form>
+              </ng-container>
+            </nz-modal>
+          </button>
+        </nz-breadcrumb-item>
       </nz-breadcrumb>
       <div class="inner-content">
         <div style="background: #ececec; padding: 30px">
@@ -55,7 +85,7 @@
               nzTitle="Info"
               [nzExtra]="extraTemplate"
             >
-              <p>Name: {{ innerName }}</p>
+              <p>Name: {{ innerName.toLocaleUpperCase() }}</p>
               <p>Address: {{ innerAddress }}</p>
               <p>Work: {{ innerCompany }}</p>
             </nz-card>
@@ -75,10 +105,16 @@
                     <nz-form-label [nzSpan]="6" nzFor="email"
                       >E-mail</nz-form-label
                     >
-                    <nz-form-control [nzSpan]="14" >
-                      <input nz-input name="name" type="email" id="name" [(ngModel)]="changeEmail"  onchange="handleOk()"  />
+                    <nz-form-control [nzSpan]="14">
+                      <input
+                        nz-input
+                        name="name"
+                        type="email"
+                        id="name"
+                        [(ngModel)]="changeEmail"
+                        onchange="handleOk()"
+                      />
                     </nz-form-control>
-                    
                   </nz-form-item>
                 </form>
               </ng-container>
@@ -98,9 +134,22 @@
           ></span>
         </ng-template>
       </div>
+      <!-- Hover added -->
     </nz-content>
+    <div class="d-grid gap-2">
+      <button
+        type="button"
+        name=""
+        id=""
+        class="btn btn-primary"
+        [disabled]="review"
+        (click)="ss()"
+      >
+        Button
+      </button>
+      <p>{{login}}</p>
+    </div>
 
     <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
-
   </nz-layout>
 </nz-layout>
