--- a/src/app/layout-user/layout-user.component.html
+++ b/src/app/layout-user/layout-user.component.html
@@ -1,155 +1,15 @@
-<nz-layout>
-  <nz-sider nzCollapsible nzWidth="250px">
-    <div class="logo"></div>
-    <ul nz-menu nzTheme="dark" nzMode="inline">
-      <li nz-menu-item>
-        <span nz-icon nzType="pie-chart"></span>
-        <span>Option 1</span>
-      </li>
-      <li nz-menu-item>
-        <span nz-icon nzType="desktop"></span>
-        <span>Option 2</span>
-      </li>
-      <li nz-submenu nzTitle="User" nzIcon="user">
-        <ul>
-          <li
-            nz-menu-item
-            *ngFor="let user of users"
-            (click)="
-              onclickName(
-                user.name,
-                user.address.city,
-                user.company.catchPhrase
-              )
-            "
-          >
-            {{ user.name }}
-          </li>
-        </ul>
-      </li>
-      <li nz-submenu nzTitle="Team" nzIcon="team" (click)="clickPage()">
-        <ul>
-          <li nz-menu-item>Team 1</li>
-          <li nz-menu-item>Team 2</li>
-        </ul>
-      </li>
-      <li nz-menu-item>
-        <span nz-icon nzType="file"></span>
-        <span>File</span>
-      </li>
-    </ul>
-  </nz-sider>
-  <nz-layout>
-    <nz-header></nz-header>
-    <nz-content>
-      <nz-breadcrumb>
-        <nz-breadcrumb-item>User</nz-breadcrumb-item>
-        <nz-breadcrumb-item>
-          <button nz-button (click)="showModal()">
-              <p>Click</p>
-              <nz-modal
-              [(nzVisible)]="isVisible"
-              nzTitle="The first Modal"
-              (nzOnCancel)="handleCancel()"
-              (nzOnOk)="addUser()"
-            >
-              <ng-container *nzModalContent>
-                <form nz-form>
-                  <nz-form-item>
-                    <nz-form-label [nzSpan]="6" nzFor="email"
-                      >E-mail</nz-form-label
-                    >
-                    <nz-form-control [nzSpan]="14">
-                      <input
-                        nz-input
-                        name="name"
-                        type="email"
-                        id="name"
-                        [(ngModel)]="addNewUser"
-                        (click)="addUser()"
-                      />
-                    </nz-form-control>
-                  </nz-form-item>
-                </form>
-              </ng-container>
-            </nz-modal>
-          </button>
-        </nz-breadcrumb-item>
-      </nz-breadcrumb>
-      <div class="inner-content">
-        <div style="background: #ececec; padding: 30px">
-          <ng-container *ngIf="innerName">
-            <nz-card
-              style="width: 300px"
-              [nzBordered]="false"
-              nzTitle="Info"
-              [nzExtra]="extraTemplate"
-            >
-              <p>Name: {{ innerName.toLocaleUpperCase() }}</p>
-              <p>Address: {{ innerAddress }}</p>
-              <p>Work: {{ innerCompany }}</p>
-            </nz-card>
-
-            <button nz-button (click)="showModal()">
-              <span>Show Modal</span>
-            </button>
-            <nz-modal
-              [(nzVisible)]="isVisible"
-              nzTitle="The first Modal"
-              (nzOnCancel)="handleCancel()"
-              (nzOnOk)="handleOk()"
-            >
-              <ng-container *nzModalContent>
-                <form nz-form>
-                  <nz-form-item>
-                    <nz-form-label [nzSpan]="6" nzFor="email"
-                      >E-mail</nz-form-label
-                    >
-                    <nz-form-control [nzSpan]="14">
-                      <input
-                        nz-input
-                        name="name"
-                        type="email"
-                        id="name"
-                        [(ngModel)]="changeEmail"
-                        onchange="handleOk()"
-                      />
-                    </nz-form-control>
-                  </nz-form-item>
-                </form>
-              </ng-container>
-            </nz-modal>
-          </ng-container>
-
-          <ng-container *ngIf="!innerName">
-            <p>No data available.</p>
-          </ng-container>
-        </div>
-        <ng-template #extraTemplate>
-          <span
-            nz-icon
-            nzType="delete"
-            nzTheme="twotone"
-            (click)="onclickDelete(innerName)"
-          ></span>
-        </ng-template>
-      </div>
-      <!-- Hover added -->
-    </nz-content>
-    <div class="d-grid gap-2">
-      <button
-        type="button"
-        name=""
-        id=""
-        class="btn btn-primary"
-        [disabled]="review"
-        (click)="ss()"
-      >
-        Button
-      </button>
-      <p>{{login}}</p>
-    </div>
-
-    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
-  </nz-layout>
-</nz-layout>
+<header>Header</header>
+<nav>Nav</nav>
+<main>
+  <section class="flexbox-container">
+    <div class="box">Box 1</div>
+    <div class="box">Box 2</div>
+    <div class="box">Box 3</div>
+  </section>
+  <section class="grid-container">
+    <div class="box">Grid Box 1</div>
+    <div class="box">Grid Box 2</div>
+    <div class="box">Grid Box 3</div>
+  </section>
+</main>
+<footer>Footer</footer>
